fixed the socials are squished out

--- a/style.css
+++ b/style.css
@@ -468,6 +468,7 @@ footer {
     border-radius: 5px;
     width: 40px;
     height: 40px;
+    margin: 2.5px;
     transition-duration: .3s;
   }
   footer .social img:hover {
